[package]
name = "wm8994"
version = "0.1.0"
edition = "2021"
authors = ["Andrzej Tokarski"]
description = "A minimal i2c driver for wm8994 audio codec"
readme = "README.md"
repository = "https://github.com/atoktoto/wm8994/"
homepage = "https://github.com/atoktoto/wm8994/"
license = "0BSD"
keywords = ["wm8994", "codec", "embedded-hal", "arm", "cortex-m"]
categories = ["embedded", "multimedia::audio", "no-std", "hardware-support"]
exclude = [".gitignore"]

[dependencies]
embedded-hal = "0.2"